--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -68,4 +68,5 @@ body { font-family: sans-serif; padding: 20px; }
     width: 100%;
     height: 1px;
     background-color: black;
+    margin: 10px 0;
 }
